<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context=".FirstFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/TvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_home_title_AM"
        android:textColor="#636363"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/BtnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnPlay"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/button_play_AM"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvHomeTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnSettings"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blue_button"
        android:text="@string/button_settings_AM"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>